--- a/index.html
+++ b/index.html
@@ -30,11 +30,7 @@
                             <div class="numero">
                                 <input type="text" name="numero" id="contact-numero" placeholder="Número" />
                             </div>
-                            <div class="button">
-                                <ul class="actions">
-                                    <li><input type="submit" class="style1" value="PARTICIPAR" /></li>
-                                </ul>
-                            </div>
+                            <button type="submit">Enviar</button>
                         </div>
                     </form>
                 </section>
