--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <div class="numero">
                                 <input type="text" name="numero" id="contact-numero" placeholder="Número" />
                             </div>
-                            <button type="submit">Enviar</button>
+                            <button type="submit" href="success.html">Enviar</button>
                         </div>
                     </form>
                 </section>
