--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="assets/css/second_article.css">
     <link rel="stylesheet" href="assets/css/third_article.css">
     <link rel="stylesheet" href="assets/css/form.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/mobile.css">
+    <link rel="stylesheet" href="assets/css/mobile_t.css">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
@@ -18,7 +21,7 @@
     <!-- Primeiro Article -->
     <article class="first-article">
         <div class="welcome-text">
-            <h1 class="title">TRASNFORME SEU SORRISO HOJE!</h1>
+            <h1 class="title">TRANSFORME SEU SORRISO HOJE!</h1>
             <p class="description">Preencha o formulário para participar da mentoria.</p>
             <div class="form-mentoria">
                 <section>
@@ -68,7 +71,15 @@
             </div>
         </div>
     </article>
-    
+    <article class="footer">
+        <div>
+            <p>&copy; Freire Odontologia | 2024</p>
+        </div>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/freireodontologia/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/Dr.laurofreireoficial" target="_blank"><i class="fab fa-facebook"></i></a>
+        </div>
+    </article>
 </body>
 
 </html>
