--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="tooth-container">
                 <div class="tooth-text">
                     <p class="description-tooth">Se você está decidido a dar um BASTA ✋ nessa dentadura de anos e quer
-                        conquistar o seu melhor sorriso, você está no lugar certo certo.</p>
+                        conquistar o seu melhor sorriso, você está no lugar certo.</p>
                 </div>
                 <div class="protese-container">
                     <img src="assets/img/protese.png" alt="Protese" class="protes-image">
