--- a/success.html
+++ b/success.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1 class="success">SUA CANDIDATURA FOI EFETUADA COM SUCESSO.</h1>
-    <img src="assets/img/header_def.png" alt="">
+    <img src="assets/img/header_def.png" alt="" class="image">
 </body>
 
 </html>
