--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     <form method="post" action="https://api.sheetmonkey.io/form/7D1FFszqdn6te2GfmbmJqN">
                         <div class="form">
                             <div class="nome">
-                                <input type="text" name="name" id="contact-name" placeholder="Nome" />
+                                <input type="text" name="name" id="contact-name" placeholder="Nome" required/>
                             </div>
                             <div class="numero">
-                                <input type="text" name="numero" id="contact-numero" placeholder="Número" />
+                                <input type="text" name="numero" id="contact-numero" placeholder="Número" required/>
                             </div>
                             <button type="submit" href="success.html">Enviar</button>
                         </div>
