--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <article class="first-article">
         <div class="welcome-text">
             <h1 class="title">TRANSFORME SEU SORRISO HOJE!</h1>
-            <p class="description">Preencha o formulário para participar da mentoria.</p>
+            <p class="description">Preencha o formulário para agendar sua avaliação gratuita.</p>
             <div class="form-mentoria">
                 <section>
                     <form method="post" action="https://api.sheetmonkey.io/form/7D1FFszqdn6te2GfmbmJqN">
