--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seu Website</title>
+    <title>VEM SORRIR</title>
     <link rel="stylesheet" href="assets/css/first_article.css">
     <link rel="stylesheet" href="assets/css/second_article.css">
     <link rel="stylesheet" href="assets/css/third_article.css">
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/mobile.css">
     <link rel="stylesheet" href="assets/css/mobile_t.css">
+    <link rel="shortcut icon" href="assets/img/favicon-32x32.png"/>
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
