--- a/success.html
+++ b/success.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seu Website</title>
+    <title>VEM SORRIR</title>
     <link rel="stylesheet" href="assets/css/success.css">
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="shortcut icon" href="assets/img/favicon-32x32.png" />
 </head>
 
 <body>
