--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/mobile.css">
     <link rel="stylesheet" href="assets/css/mobile_t.css">
-    <link rel="shortcut icon" href="assets/img/favicon-32x32.png"/>
+    <link rel="shortcut icon" href="assets/img/favicon-32x32.png" />
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
@@ -22,19 +22,21 @@
     <!-- Primeiro Article -->
     <article class="first-article">
         <div class="welcome-text">
-            <h1 class="title">TRANSFORME SEU SORRISO HOJE!</h1>
-            <p class="description">Preencha o formulário para agendar sua avaliação gratuita.</p>
+            <h1 class="title">Você merece <b>sorrir sem medo!</b></h1>
+            <p class="call">Recupere seu <b>sorriso</b> e eleve sua autoestima agora!</p>
+            <p class="description">Preencha o cadastro que nosso time de especialistas vai entrar em contato para te
+                contar como é fácil e acessível ter o <b>sorriso</b> dos seus sonhos!</p>
             <div class="form-mentoria">
                 <section>
                     <form method="post" action="https://api.sheetmonkey.io/form/7D1FFszqdn6te2GfmbmJqN">
                         <div class="form">
                             <div class="nome">
-                                <input type="text" name="name" id="contact-name" placeholder="Nome" required/>
+                                <input type="text" name="name" id="contact-name" placeholder="Nome" required />
                             </div>
                             <div class="numero">
-                                <input type="text" name="numero" id="contact-numero" placeholder="Número" required/>
+                                <input type="text" name="numero" id="contact-numero" placeholder="Número" required />
                             </div>
-                            <button type="submit" href="success.html">Enviar</button>
+                            <button type="submit" href="success.html">Quero Transformar Minha Vida!</button>
                         </div>
                     </form>
                 </section>
@@ -46,11 +48,11 @@
     <!-- Segundo Article -->
     <article class="second-article">
         <div class="benefits-text">
-            <p class="benefits">Você merece sorrir sem medo! Na Freire Odontologia, temos a solução definitiva para que
-                você nunca mais esconda seu sorriso. Com nossas próteses fixas de alta tecnologia, você vai:</p>
+            <p class="benefits-description"> <b>Sorria e Coma</b> com Confiança!</p>
             <div class="benefits-list">
-                <h3>VOLTAR A COMER O QUE GOSTA SEM PREOCUPAÇÕES.</h3>
-                <h3>SORRIR COM CONFIANÇA EM TODAS AS FOTOS.</h3>
+                <h3>✅ Dentes permanentes e naturais.</h3>
+                <h3>✅ Fale e ria sem medo.</h3>
+                <h3>✅ Mastigue com facilidade.</h3>
             </div>
         </div>
         <img src="assets/img/sorriso.png" alt="Sorriso" class="benefits-image">
@@ -64,6 +66,8 @@
                 <div class="tooth-text">
                     <p class="description-tooth">Se você está decidido a dar um BASTA ✋ nessa dentadura de anos e quer
                         conquistar o seu melhor sorriso, você está no lugar certo.</p>
+                    <p class="tooth-description">Na Freire Odontologia, temos a <b>solução definitiva</b> para que
+                        você nunca mais esconda seu sorriso.</p>
                 </div>
             </div>
             <img src="assets/img/protese.png" alt="Protese" class="protes-image">
