--- a/success.html
+++ b/success.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1 class="success">SUA CANDIDATURA FOI EFETUADA COM SUCESSO.</h1>
+    <h1 class="success">SUCESSO! EM BREVE ENTRAREMOS EM CONTATO!</h1>
     <img src="assets/img/header_def.png" alt="" class="image">
 </body>
 
