--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VEM SORRIR</title>
+
+    <script>
+        !function(f,b,e,v,n,t,s)
+        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+        n.queue=[];t=b.createElement(e);t.async=!0;
+        t.src=v;s=b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t,s)}(window, document,'script',
+        'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '781310447291035');
+        fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+        src="https://www.facebook.com/tr?id=781310447291035&ev=PageView&noscript=1"
+    /></noscript>
+
     <link rel="stylesheet" href="assets/css/first_article.css">
     <link rel="stylesheet" href="assets/css/second_article.css">
     <link rel="stylesheet" href="assets/css/third_article.css">
@@ -40,7 +57,7 @@
                             <div class="numero">
                                 <input type="text" name="numero" id="contact-numero" placeholder="Número" required />
                             </div>
-                            <button type="submit" href="success.html">Quero Transformar Minha Vida!</button>
+                            <button type="submit" href="success.html" id="form-submit-button">Quero Transformar Minha Vida!</button>
                         </div>
                     </form>
                 </section>
@@ -84,28 +101,11 @@
         </div>
     </article>
 
-    <!-- Facebook Pixel Code -->
     <script>
-        !function (f, b, e, v, n, t, s) {
-            if (f.fbq) return; n = f.fbq = function () {
-                n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-            };
-            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
-            n.queue = []; t = b.createElement(e); t.async = !0;
-            t.src = v; s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s)
-        }(window, document, 'script',
-            'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '781310447291035');
-        fbq('track', 'PageView');
-        fbq('track', 'ViewContent');
+        document.getElementById("form-submit-button").addEventListener("click", function() {
+            fbq('track', 'Lead');
+        });
     </script>
-    <noscript>
-        <img height="1" width="1" style="display:none"
-            src="https://www.facebook.com/tr?id=781310447291035&ev=PageView&noscript=1" />
-    </noscript>
-    <!-- End Facebook Pixel Code -->
 </body>
 
 </html>
